--- a/exercise2.html
+++ b/exercise2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <script src="js/jquery-3.2.1.min.js"></script> 
         <title>CSS Exercise 2</title>
         <link href="style.cssexercise2" rel="stylesheet" type="text/css">
         <style>
