--- a/exercise2.html
+++ b/exercise2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <script src="js/jquery-3.2.1.min.js"></script> 
+
         <title>CSS Exercise 2</title>
         <link href="style.cssexercise2" rel="stylesheet" type="text/css">
         <style>
@@ -12,6 +12,7 @@
         </style>
     </head>
     <body>
+
         <ul class='nav'>
             <li><a href="#explanation">Home</a></li>
             <li><a href="#about_blue">About blue</a></li>
@@ -62,6 +63,6 @@
             </div>
 
         </div>
-
+<script src="js/scripts.js"></script>
     </body>
 </html>
