--- a/exercise2.html
+++ b/exercise2.html
@@ -63,6 +63,7 @@
             </div>
 
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="js/scripts.js"></script>
     </body>
 </html>
